# lowercase

./: README.md  pyproject.toml
test/: test-validator.py  test_validator.py
validator/: __init__.py  main.py
